--- a/pom.xml
+++ b/pom.xml
@@ -44,10 +44,13 @@
 		</dependency>
 
 		<!-- Lombok (Optional: Auto-generate getters/setters) -->
+		<!-- Update the Lombok dependency -->
 		<dependency>
-			<groupId>org.projectlombok</groupId>
-			<artifactId>lombok</artifactId>
-			<scope>provided</scope>
+		    <groupId>org.projectlombok</groupId>
+		    <artifactId>lombok</artifactId>
+		    <version>1.18.32</version>
+		    <scope>provided</scope>
+		    <optional>true</optional>
 		</dependency>
 
 		<!-- Spring Boot Testing (For Unit Tests) -->
@@ -71,13 +74,7 @@
 
 	<build>
 		<plugins>
-			<!-- Spring Boot Maven Plugin -->
-			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
-			</plugin>
-
-			<!-- Maven Compiler Plugin (Ensure Java 17 Compatibility) -->
+			<!-- Add Lombok plugin configuration -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
@@ -85,6 +82,13 @@
 				<configuration>
 					<source>17</source>
 					<target>17</target>
+					<annotationProcessorPaths>
+						<path>
+							<groupId>org.projectlombok</groupId>
+							<artifactId>lombok</artifactId>
+							<version>1.18.32</version>
+						</path>
+					</annotationProcessorPaths>
 				</configuration>
 			</plugin>
 		</plugins>
