--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
 		<maven.compiler.source>17</maven.compiler.source>
 		<maven.compiler.target>17</maven.compiler.target>
 		<postgresql.version>42.7.2</postgresql.version>  <!-- Specify PostgreSQL version -->
+		<spring-boot.version>3.4.3</spring-boot.version>
 	</properties>
 
 	<dependencies>
@@ -89,22 +90,26 @@
 					</execution>
 				</executions>
 			</plugin>
-			<!-- Add Lombok plugin configuration -->
 			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.8.1</version>
-				<configuration>
-					<source>17</source>
-					<target>17</target>
-					<annotationProcessorPaths>
-						<path>
-							<groupId>org.projectlombok</groupId>
-							<artifactId>lombok</artifactId>
-							<version>1.18.32</version>
-						</path>
-					</annotationProcessorPaths>
-				</configuration>
+			    <groupId>org.apache.maven.plugins</groupId>
+			    <artifactId>maven-compiler-plugin</artifactId>
+			    <!-- Remove explicit version to inherit from Spring Boot parent -->
+			    <configuration>
+			        <source>17</source>
+			        <target>17</target>
+			        <annotationProcessorPaths>
+			            <path>
+			                <groupId>org.projectlombok</groupId>
+			                <artifactId>lombok</artifactId>
+			                <version>1.18.32</version>
+			            </path>
+			            <path>
+			                <groupId>org.springframework.boot</groupId>
+			                <artifactId>spring-boot-configuration-processor</artifactId>
+			                <version>${spring-boot.version}</version>
+			            </path>
+			        </annotationProcessorPaths>
+			    </configuration>
 			</plugin>
 		</plugins>
 	</build>
