created a docker file

--- a/pom.xml
+++ b/pom.xml
@@ -79,9 +79,7 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
-				<configuration>
-					<mainClass>com.example.demo.DemoApplication</mainClass>
-				</configuration>
+				<version>${spring-boot.version}</version>
 				<executions>
 					<execution>
 						<goals>
